objects/Student_rules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stud_Email__c</fullName>
        <label>Stud Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stud_name__c</fullName>
        <label>Stud name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mob_no__c</fullName>
        <label>mob no</label>
        <type>Phone</type>
    </fields>
    <label>Student rules</label>
</CustomObject>